<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_feed"
                android:textColor="@color/skyblue"

                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        app:queryBackground="@color/Orange"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/include"
        app:defaultQueryHint="Search"></androidx.appcompat.widget.SearchView>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white"
        app:tabIndicatorColor="@color/blue"
        app:tabIndicatorHeight="3.5dp"
        app:tabSelectedTextColor="@color/DarkOrange"
        app:tabMode="scrollable"
        app:tabTextColor="@color/Fuchsia">


<com.google.android.material.tabs.TabItem
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/home"
    android:id="@+id/home">
</com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:id="@+id/Sports">
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:id="@+id/health">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:id="@+id/Science">
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:id="@+id/tech">
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment"
           android:id="@+id/Entertain">
        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>


   <androidx.viewpager.widget.ViewPager
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="0dp"
        android:layout_above="@id/fragmentContainer1"
       android:layout_below="@id/search"
       android:id="@+id/fragmentContainer1">

   </androidx.viewpager.widget.ViewPager>

</RelativeLayout>